Articles added with a grid layout

--- a/CSS/bölüm-6/News-Site/css/style.css
+++ b/CSS/bölüm-6/News-Site/css/style.css
@@ -279,3 +279,10 @@ p {
 #header .header-content {
   z-index: 98;
 }
+
+/* articles */
+#main-articles .articles-container {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 1rem;
+}
