--- a/CSS/bölüm-6/News-Site/css/style.css
+++ b/CSS/bölüm-6/News-Site/css/style.css
@@ -97,7 +97,7 @@ p {
   color: #fff;
 }
 .bg-secondary {
-  background-color: var(--secondary-color);
+  background-color: var(--secondary-color) !important;
   color: #fff;
 }
 
@@ -332,4 +332,36 @@ p {
 
 #main-footer .footer-container ul li a:hover {
   color: var(--primary-color);
+}
+
+/* article details */
+.page-container {
+  display: grid;
+  grid-template-columns: 5fr 2fr;
+  margin: 2.5rem 0;
+  gap: 1.5rem;
+}
+
+.page-container > *:first-child {
+  grid-row: 1 / span 3;
+}
+
+#article .meta {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1rem;
+  background-color: #eee;
+  border-radius: 5px;
+}
+
+.page-container #categories ul li a {
+  display: block;
+  padding: 0.5rem 0;
+  border-bottom: 1px dotted #555;
+  width: 90%;
+}
+.page-container #categories ul li a:hover {
+  color: var(--primary-color);
+  border-bottom: 1px solid var(--primary-color);
 }
