footer ve section-c yapildi

--- a/CSS/part-7/freelancer/scss/_header.scss
+++ b/CSS/part-7/freelancer/scss/_header.scss
@@ -22,7 +22,7 @@
         padding-bottom: 0.5rem;
         transition: border-color 0.5s;
         &:hover {
-          border-color: $medium-color;
+          border-color: $light-color;
         }
         &.active {
           border-color: $primary-color;
