--- a/CSS/part-7/freelancer/scss/_home.scss
+++ b/CSS/part-7/freelancer/scss/_home.scss
@@ -1,4 +1,6 @@
 #home {
+  font-family: "Prompt", sans-serif;
+  line-height: 1.5;
   // home section a
   &__a {
     .skills {
@@ -12,11 +14,18 @@
         font-size: 4rem;
         margin-bottom: 0.5rem;
       }
+      p {
+        word-spacing: 1.5px;
+      }
     }
   }
 
+  // home section b
   &__b {
     .container {
+      .section-title {
+        margin-top: 7rem;
+      }
       .profile {
         display: flex;
         flex-wrap: wrap;
@@ -35,6 +44,50 @@
             box-shadow: 0 0 8px rgba(0, 0, 0, 0.5); /* Gölge efekti: renk, yatay, dikey, bulanıklık (blur) */
           }
         }
+      }
+    }
+  }
+
+  // home section c
+  &__c {
+    .process {
+      display: grid;
+      grid-template-columns: repeat(4, 1fr);
+      gap: 1.5rem;
+      text-align: center;
+      ul li {
+        margin: 10px 0;
+        font-style: italic;
+      }
+      &__icon {
+        position: relative;
+        width: 140px;
+        height: 130px;
+        border-radius: 50%;
+        background-color: $dark-color;
+        color: #fff;
+        padding: 2rem;
+        text-align: center;
+        transition: all 1s;
+        &:hover {
+          background-color: $primary-color;
+
+          .process__step {
+            background-color: $dark-color;
+          }
+        }
+      }
+
+      &__step {
+        position: absolute;
+        top: 0;
+        right: 0;
+        font-size: 25px;
+        background-color: $primary-color;
+        border-radius: 50%;
+        line-height: 10px;
+        padding: 1rem;
+        transition: all 1s;
       }
     }
   }
