--- a/CSS/part-7/freelancer/scss/_footer.scss
+++ b/CSS/part-7/freelancer/scss/_footer.scss
@@ -1,1 +1,26 @@
- 
+#main-footer {
+  background-color: $dark-color;
+  color: #fff;
+  height: 5rem;
+
+  .footer-content {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 5rem;
+    .social a {
+      color: #fff;
+    }
+    .social .fab {
+      margin-right: 1rem;
+      border: 2px solid #fff;
+      border-radius: 50%;
+      text-align: center;
+      padding: 0.6rem;
+      transition: all 0.6s;
+      &:hover {
+        background-color: $primary-color;
+      }
+    }
+  }
+}
