--- a/CSS/part-7/freelancer/scss/_project.scss
+++ b/CSS/part-7/freelancer/scss/_project.scss
@@ -1,30 +1,39 @@
-.items {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  gap: 1rem;
-  box-shadow: rgba(149, 154, 145, 0.5) 0px 8px 24px;
+#projects {
+  min-height: calc(100vh - 11rem);
 
-  .item {
-    position: relative;
+  .items {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 1rem;
 
-    background-color: $light-color;
-    overflow: hidden;
-    &::after {
-      content: "";
-      position: absolute;
-      display: block;
-      background-color: $primary-color;
-      opacity: 0.2;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      transform: translateX(-140%) translateY(-140%) rotate(45deg);
-      transition: transform 2s cubic-bezier(0.175, 0.885, 0.32, 1.275);
-    }
+    .item {
+      box-shadow: rgba(149, 154, 145, 0.5) 0px 8px 24px;
 
-    &:hover::after {
-      transform: scale(2) translateX(45%) translateY(45%) rotate(45deg);
+      border-radius: 10px;
+      position: relative;
+
+      background-color: $light-color;
+      overflow: hidden;
+      &__text {
+        margin: 1.5rem 1.5rem;
+      }
+      &::after {
+        content: "";
+        position: absolute;
+        display: block;
+        background-color: $primary-color;
+        opacity: 0.8;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        transform: translateX(-140%) translateY(-140%) rotate(45deg);
+        transition: transform 0.5s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+      }
+
+      &:hover::after {
+        transform: scale(2) translateX(-50%) translateY(-50%) rotate(45deg);
+      }
     }
   }
 }
