--- a/Bootstrap/part-1/awesome-blog/style.css
+++ b/Bootstrap/part-1/awesome-blog/style.css
@@ -1,3 +1,22 @@
 .navbar {
   background-color: #085e7d !important;
 }
+
+.bg-dark {
+  background-color: #085e7d !important;
+}
+
+.card-img-top {
+  width: 100%;
+  height: 30vh;
+  object-fit: cover;
+}
+#map {
+  height: 450px;
+}
+
+@media (min-width: 768px) {
+  #map {
+    height: 100%;
+  }
+}
