--- a/Angular/ng-app/src/app/app.component.html
+++ b/Angular/ng-app/src/app/app.component.html
@@ -5,7 +5,7 @@
       <category-list></category-list>
     </div>
     <div class="col-9">
-      <product-list></product-list>
+      <router-outlet></router-outlet>
     </div>
   </div>
 </div>
