--- a/Angular/ng-app/src/app/navbar/navbar.component.html
+++ b/Angular/ng-app/src/app/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <div class="navbar navbar-expand-lg navbar-dark bg-primary">
   <div class="container">
-    <a href="#" class="navbar-brand">ShopApp</a>
+    <a routerLink="/" class="navbar-brand">ShopApp</a>
 
     <button
       class="navbar-toggler"
@@ -12,10 +12,10 @@
     <div class="collapse navbar-collapse" id="navbarCollapse">
       <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a href="#" class="nav-link">Home</a>
+          <a routerLink="/" class="nav-link">Home</a>
         </li>
         <li class="nav-item">
-          <a href="#" class="nav-link">Products</a>
+          <a routerLink="/products" class="nav-link">Products</a>
         </li>
       </ul>
     </div>
