ng firebase started

--- a/Angular/ng-app/src/app/app.component.html
+++ b/Angular/ng-app/src/app/app.component.html
@@ -1,4 +1,8 @@
 <navbar></navbar>
+
+<button class="btn btn-primary" (click)="createProduct()">
+  Create Product
+</button>
 <div class="container my-3">
   <div class="row">
     <div class="col-3">
