--- a/Angular/ng-app/src/app/navbar/navbar.component.html
+++ b/Angular/ng-app/src/app/navbar/navbar.component.html
@@ -17,6 +17,9 @@
         <li class="nav-item">
           <a routerLink="/products" class="nav-link">Products</a>
         </li>
+        <li class="nav-item">
+          <a routerLink="/products/create" class="nav-link">Product Create</a>
+        </li>
       </ul>
     </div>
   </div>
