--- a/Angular/ng-app/src/app/navbar/navbar.component.html
+++ b/Angular/ng-app/src/app/navbar/navbar.component.html
@@ -20,6 +20,11 @@
         <li class="nav-item">
           <a routerLink="/products/create" class="nav-link">Product Create</a>
         </li>
+        <li class="nav-item">
+          <a routerLink="/categories/create" class="nav-link"
+            >Category Create</a
+          >
+        </li>
       </ul>
     </div>
   </div>
