--- a/Angular/ng-app/src/app/product-list/product-list.component.html
+++ b/Angular/ng-app/src/app/product-list/product-list.component.html
@@ -26,11 +26,13 @@
   </div>
 </div> -->
 
-<div *ngIf="products.length > 0; else noProducts">
-  <ng-template
-    [ngTemplateOutlet]="productList"
-    [ngTemplateOutletContext]="{ products: products }"
-  ></ng-template>
+<div *ngIf="!loading">
+  <div *ngIf="products.length > 0; else noProducts">
+    <ng-template
+      [ngTemplateOutlet]="productList"
+      [ngTemplateOutletContext]="{ products: products }"
+    ></ng-template>
+  </div>
 </div>
 
 <ng-template #productList let-products="products">
@@ -66,3 +68,7 @@
 <ng-template #noProducts>
   <div class="alert alert-warning">no product</div>
 </ng-template>
+
+<div *ngIf="loading" class="spinner-border text-primary" role="status">
+  <span class="visually-hidden">Loading...</span>
+</div>
