--- a/Angular/ng-app/src/styles.css
+++ b/Angular/ng-app/src/styles.css
@@ -1,1 +1,6 @@
-
+.form-control.ng-touched.ng-invalid {
+  border-left: 5px solid #a94442;
+}
+.form-control.ng-touched.ng-valid {
+  border-left: 5px solid #41a948;
+}
