--- a/Angular/ng-app/src/app/product-list/product/product.component.html
+++ b/Angular/ng-app/src/app/product-list/product/product.component.html
@@ -10,11 +10,15 @@
       </div>
       <div class="col-9">
         <div class="card-body">
-          <div class="card-title">{{ product.name }}</div>
-          <div class="card-text">
-            {{ product.description }}
+          <div class="card-title">
+            <h3>{{ product.name }}</h3>
           </div>
         </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-12">
+        <div class="card-text" [innerHTML]="product.description"></div>
       </div>
     </div>
   </div>
