--- a/ASP.NET CORE 7.0/WebApplication1/WebApplication1/Views/KitapTuru/Ekle.cshtml
+++ b/ASP.NET CORE 7.0/WebApplication1/WebApplication1/Views/KitapTuru/Ekle.cshtml
@@ -14,7 +14,7 @@
          </div>
 
         <button type="submit" class="btn btn-primary mb-2" >Kitap Türü Ekle</button>
-        <a asp-controller="KitapTuru" asp-action="Index" class="btn btn-primary mb-2" style="width:250px">Kitap Türlerine Geri Dön</a>
+        <a asp-controller="KitapTuru" asp-action="Index" class="btn btn-primary mb-2">Kitap Türlerine Geri Dön</a>
     </div>
 </form>
 
