--- a/ASP.NET CORE 7.0/WebApplication1/WebApplication1/Views/KitapTuru/Index.cshtml
+++ b/ASP.NET CORE 7.0/WebApplication1/WebApplication1/Views/KitapTuru/Index.cshtml
@@ -34,7 +34,7 @@
                     Id
                 </th>
                 <th class="col-2">
-                    Kitap Adı
+                    Tür Adı
                 </th
                  <th class="col-1"></th>   
                  <th class="col-1"></th>
