book rental transactions added

--- a/ASP.NET CORE 7.0/WebApplication1/WebApplication1/Views/Kitap/EkleGuncelle.cshtml
+++ b/ASP.NET CORE 7.0/WebApplication1/WebApplication1/Views/Kitap/EkleGuncelle.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Kitap
 
 <form method="post" enctype="multipart/form-data">
-
+    <input asp-for="ResimUrl" hidden/>
     
     <div class="row">
         <div class="col-10">
