--- a/ASP.NET CORE 7.0/WebApplication1/WebApplication1/Views/Shared/_Layout.cshtml
+++ b/ASP.NET CORE 7.0/WebApplication1/WebApplication1/Views/Shared/_Layout.cshtml
@@ -31,6 +31,9 @@
                         <li class="nav-item">
                             <a class="nav-link " asp-area="" asp-controller="Kitap" asp-action="Index">Kitaplar</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link " asp-area="" asp-controller="Kiralama" asp-action="Index">Kiralama İşlemleri</a>
+                        </li>
                     </ul>
                 </div>
             </div>
