Add Staff added

--- a/HotelProject/Frontend/HotelProject.WebUI/Views/Staff/Index.cshtml
+++ b/HotelProject/Frontend/HotelProject.WebUI/Views/Staff/Index.cshtml
@@ -1,8 +1,30 @@
-﻿
+﻿@model List<StaffViewModel>
 @{
     ViewData["Title"] = "Index";
     Layout = "~/Views/AdminLayout/_AdminLayout.cshtml";
 }
 
-<h1>Index</h1>
+<table class="table table-bordered">
+    <tr>
+        <th>#</th>
+        <th>Personel Adı</th>
+        <th>Personel Ünvan</th>
+        <th>Sil</th>
+        <th>Güncelle</th>
+        <th>Detaylar</th>
+    </tr>
+    @foreach(var item in Model)
+            {
+                <tr>
+            <th>@item.StaffID</th>
+            <td>@item.Name</td>
+            <td>@item.Title</td>
+            <td> <a href="#" class="btn mb-1 btn-rounded btn-outline-danger w-100">Sil</a> </td>
+            <td> <a href="#" class="btn mb-1 btn-rounded btn-outline-success w-100">Güncelle</a> </td>
+            <td> <a href="#" class="btn mb-1 btn-rounded btn-outline-dark w-100">Detaylar</a> </td>
 
+                </tr>
+            }
+</table>
+
+<a asp-controller="Staff" asp-action="AddStaff" class="btn mb-1 btn-rounded btn-outline-info">Yeni Personel Ekle</a>
