services operations completed

--- a/HotelProject/Frontend/HotelProject.WebUI/Views/AdminLayout/SidebarPartial.cshtml
+++ b/HotelProject/Frontend/HotelProject.WebUI/Views/AdminLayout/SidebarPartial.cshtml
@@ -11,7 +11,11 @@
                     <i class="icon-badge menu-icon"></i><span class="nav-text">References</span>
                 </a>
             </li>
-
+            <li>
+                <a asp-controller="Service" asp-action="Index" aria-expanded="false">
+                    <i class="icon-notebook menu-icon"></i><span class="nav-text">Services</span>
+                </a>
+            </li>
            
         </ul>
     </div>
