--- a/HotelProject/Frontend/HotelProject.WebUI/Views/Staff/UpdateStaff.cshtml
+++ b/HotelProject/Frontend/HotelProject.WebUI/Views/Staff/UpdateStaff.cshtml
@@ -7,23 +7,23 @@
 
 <form method="post">
     <input type="hidden" asp-for="StaffID" />
-    <label>Personel Adı :</label>
+    <label>Staff Name</label>
     <input type="text" asp-for="Name" class="form-control" />
     <br />
-    <label>Personel Ünvanı :</label>
+    <label>Staff Title</label>
     <input type="text" asp-for="Title" class="form-control" />
     <br />
-    <label>Sosyal Medya 1</label>
+    <label>Social Media 1</label>
     <input type="text" asp-for="SocialMedia1" class="form-control" />
     <br />
-    <label>Sosyal Medya 2</label>
+    <label>Social Media 2</label>
     <input type="text" asp-for="SocialMedia2" class="form-control" />
     <br />
-    <label>Sosyal Medya 3</label>
+    <label>Social Media 3</label>
     <input type="text" asp-for="SocialMedia3" class="form-control" />
     <br />
 
-    <button class="btn btn-primary">Personeli Güncelle</button>
+    <button class="btn btn-primary">Update Staff</button>
 </form>
 
 
