--- a/HotelProject/Frontend/HotelProject.WebUI/Views/_ViewImports.cshtml
+++ b/HotelProject/Frontend/HotelProject.WebUI/Views/_ViewImports.cshtml
@@ -8,5 +8,6 @@
 @using HotelProject.WebUI.Dtos.AboutDto
 @using HotelProject.WebUI.Dtos.RoomDto
 @using HotelProject.WebUI.Dtos.TestimonialDto
+@using HotelProject.WebUI.Dtos.StaffDto
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
