--- a/Asp.Net Core Mvc-Api/FirstApp/WebApplication1/Views/Home/Index.cshtml
+++ b/Asp.Net Core Mvc-Api/FirstApp/WebApplication1/Views/Home/Index.cshtml
@@ -1,7 +1,7 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
+﻿@* @{
+    List<string> names = new() { "Yusuf", "Taha", "Kara" };
 }
+ *@
 
-<p>INDEX</p>
+
+ <p>@ViewBag.Name</p>
