update-delete-create function with static data

--- a/Asp.Net Core Mvc-Api/FirstApp/WebApplication1/Views/Home/Create.cshtml
+++ b/Asp.Net Core Mvc-Api/FirstApp/WebApplication1/Views/Home/Create.cshtml
@@ -1,33 +1,25 @@
-﻿<!DOCTYPE html>
-<html lang="tr">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Create Customner</title>
-    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+﻿@using FirstApp.Models
+@addTagHelper *,Microsoft.AspNetCore.Mvc.TagHelpers
+@model Customer
+@{
+    Layout = "~/Views/Shared/_Layout.cshtml";
+}
 
-</head>
-<body>
-    <div class="container">
         <h3>Create Customer</h3>
-        <form action="/Home/CreateWithForm" method="post">
+        <form asp-action="CreateWithForm" asp-controller="Home" method="post">
               <div class="form-group">
                   <label>Customer Name : </label>
-                  <input type="text" name="firstName" class="form-control"/>
+                  <input asp-for="@Model.firstName" class="form-control"/>
               </div>
             <div class="form-group">
                 <label>Customer Lastname : </label>
-                <input type="text" name="lastName" class="form-control" />
+                <input asp-for="@Model.lastName" class="form-control" />
             </div>
             <div class="form-group">
                 <label>Customer Age : </label>
-                <input type="text" name="age" class="form-control" />
+                <input asp-for="@Model.age" class="form-control" />
             </div>
             <div class="form-group text-right">
                <button type="submit" class="btn btn-primary">Save</button>
             </div>
         </form>
-    </div>
-</body>
-</html>
