--- a/Asp.Net Core Mvc-Api/FirstApp/WebApplication1/Views/Home/Create.cshtml
+++ b/Asp.Net Core Mvc-Api/FirstApp/WebApplication1/Views/Home/Create.cshtml
@@ -1,6 +1,4 @@
-﻿@using FirstApp.Models
-@addTagHelper *,Microsoft.AspNetCore.Mvc.TagHelpers
-@model Customer
+﻿@model Customer
 @{
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
