--- a/Asp.Net Core Mvc-Api/FirstApp/WebApplication1/Views/Home/Index.cshtml
+++ b/Asp.Net Core Mvc-Api/FirstApp/WebApplication1/Views/Home/Index.cshtml
@@ -1,6 +1,4 @@
-﻿@using FirstApp.Models
-@addTagHelper *,Microsoft.AspNetCore.Mvc.TagHelpers
-@model List<Customer>
+﻿@model List<Customer>
 @{
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
