--- a/Asp.Net Core Mvc-Api/FirstApp/WebApplication1/Views/Shared/_Layout.cshtml
+++ b/Asp.Net Core Mvc-Api/FirstApp/WebApplication1/Views/Shared/_Layout.cshtml
@@ -10,16 +10,15 @@
 <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">Navbar</a>
+            <a class="navbar-brand"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
-                    <a class="nav-link" href="#">Features</a>
-                    <a class="nav-link" href="#">Pricing</a>
-                    <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+                    <a class="nav-link active" asp-action="Index" asp-controller="Home">Customers</a>
+                    <a class="nav-link" asp-action="List" asp-controller="File">Files</a>
+                    <a class="nav-link" asp-action="List" asp-controller="Folder">Folders</a>
                 </div>
             </div>
         </div>
