Custom TagHelper, Areas, Validation added

--- a/Asp.Net Core Mvc-Api/FirstApp/WebApplication1/Views/File/List.cshtml
+++ b/Asp.Net Core Mvc-Api/FirstApp/WebApplication1/Views/File/List.cshtml
@@ -4,7 +4,7 @@
 }
 
 <a asp-action="Create">Create New File</a>
-
+<paragraphx short-description="Yusuf"></paragraphx>
 <div class="row">
     <div class="col-4">
         @await Component.InvokeAsync("News", new {@color = "blue"})
