--- a/Asp.Net Core Mvc-Api/FirstApp/WebApplication1/Views/Home/Create.cshtml
+++ b/Asp.Net Core Mvc-Api/FirstApp/WebApplication1/Views/Home/Create.cshtml
@@ -4,20 +4,29 @@
 }
 
         <h3>Create Customer</h3>
-        <form asp-action="CreateWithForm" asp-controller="Home" method="post">
+<form asp-action="Create" asp-controller="Home" method="post">
               <div class="form-group">
-                  <label>Customer Name : </label>
+                  <label>Customer Name : *
+                      <span asp-validation-for="@Model.firstName" class="text-danger"></span>
+                  </label>
                   <input asp-for="@Model.firstName" class="form-control"/>
               </div>
             <div class="form-group">
-                <label>Customer Lastname : </label>
+                <label>Customer Lastname : *
+            <span asp-validation-for="@Model.lastName" class="text-danger"></span>
+
+                </label>
                 <input asp-for="@Model.lastName" class="form-control" />
             </div>
             <div class="form-group">
-                <label>Customer Age : </label>
+                <label>Customer Age : *
+            <span asp-validation-for="@Model.age" class="text-danger"></span>
+                </label>
                 <input asp-for="@Model.age" class="form-control" />
             </div>
             <div class="form-group text-right">
                <button type="submit" class="btn btn-primary">Save</button>
             </div>
+
+            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
         </form>
