--- a/Asp.Net Core Mvc-Api/FirstApp/WebApplication1/Views/_ViewImports.cshtml
+++ b/Asp.Net Core Mvc-Api/FirstApp/WebApplication1/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
-﻿@using FirstApp.Models
-@addTagHelper *,Microsoft.AspNetCore.Mvc.TagHelpers
+﻿@addTagHelper *,Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper FirstApp.TagHelpers.*,FirstApp
+@using FirstApp.Models
 @using System.IO
