User List, Create-Account module added

--- a/Asp.Net Core Mvc-Api/Udemy.BankProject/Udemy.BankProject.Web/Views/Home/Index.cshtml
+++ b/Asp.Net Core Mvc-Api/Udemy.BankProject/Udemy.BankProject.Web/Views/Home/Index.cshtml
@@ -1,8 +1,28 @@
-﻿@{
+﻿@model List<UserListModel>
+@{
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 <div class="container">
-    <p>
-        Home Views
-    </p>
+    <table class="mt-4 table table-hover table-bordered table-sm">
+        <thead>
+            <tr>
+                <th>Id</th>
+                <th>Name</th>
+                <th>Surname</th>
+                <th>Account Count</th>
+            </tr>
+        </thead>
+        <tbody> 
+                @foreach(var item in Model)
+                {
+                <tr>
+                    <td>@item.Id</td>
+                    <td>@item.Name</td>
+                    <td>@item.Surname</td>
+                    <td><getAccountCount application-user-id="@item.Id"></getAccountCount></td>
+                    <td><a asp-action="Create" asp-controller="Account" asp-route-id="@item.Id">Create New Account</a></td>
+                </tr>
+                }
+        </tbody>
+    </table>
 </div>
