--- a/Asp.Net Core Mvc-Api/Udemy.BankProject/Udemy.BankProject.Web/Views/Shared/_Layout.cshtml
+++ b/Asp.Net Core Mvc-Api/Udemy.BankProject/Udemy.BankProject.Web/Views/Shared/_Layout.cshtml
@@ -7,7 +7,7 @@
     <link href="~/node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" />
 </head>
 <body>
-    <div>
+    <div class="container">
         @RenderBody()
     </div>
 </body>
